--- a/resources/style.css
+++ b/resources/style.css
@@ -510,7 +510,7 @@ body {
 }
 
 .dark-mode .projects-section {
-    background-color: #1e1e1e;
+    background-color: #000000;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
 
